--- a/public/index.html
+++ b/public/index.html
@@ -372,7 +372,7 @@
 
         // Show welcome message on load
         window.addEventListener('load', () => {
-            addMessage("Hi! I’m Tenovos AI. Please enter a prompt to generate an image.", false);
+            addMessage("Hi! I’m Tenovos AI. Please describe the image you want to generate, and I will create it for you.", false);
         });
 
         // Step 1: Submit text and/or image
@@ -494,3 +494,4 @@
 </body>
 
 </html>
+
