--- a/public/index.html
+++ b/public/index.html
@@ -4,66 +4,80 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tenovos Chatbot</title>
+    <title>Tenovos Content Creator AI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <style>
         body {
-            background: #f8f9fa;
+            background: linear-gradient(135deg, #e0eafc 0%, #cfdef3 100%);
             min-height: 100vh;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Poppins', sans-serif;
             overflow-x: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 20px;
         }
 
         .chat-container {
-            max-width: 600px;
-            height: 70vh;
-            max-height: 500px;
-            border-radius: 20px;
-            background: #fff;
-            border: 1px solid #e9ecef;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+            max-width: 700px;
+            width: 100%;
+            height: 80vh;
+            max-height: 600px;
+            border-radius: 24px;
+            background: #ffffff;
+            border: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+
+        .chat-container:hover {
+            transform: translateY(-5px);
         }
 
         .chat-header {
-            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            background: linear-gradient(135deg, #6b48ff 0%, #00ddeb 100%);
             color: white;
-            padding: 1rem;
+            padding: 1.5rem;
             text-align: center;
             font-weight: 700;
-            font-size: 1.1rem;
-            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+            font-size: 1.4rem;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            border-bottom: 3px solid rgba(255, 255, 255, 0.2);
         }
 
         #chat {
             flex: 1;
             overflow-y: auto;
-            padding: 1rem;
+            padding: 1.5rem;
             display: flex;
             flex-direction: column;
-            gap: 0.75rem;
-            background: #fff;
+            gap: 1rem;
+            background: #fafafa;
             scroll-behavior: smooth;
         }
 
         .message {
-            padding: 0.75rem 1rem;
-            border-radius: 18px;
-            max-width: 75%;
+            padding: 0.75rem 1.25rem;
+            border-radius: 20px;
+            max-width: 80%;
             word-wrap: break-word;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 3px 15px rgba(0, 0, 0, 0.1);
             position: relative;
-            animation: fadeIn 0.3s ease-in;
+            animation: slideIn 0.4s ease-in-out;
+            transition: transform 0.2s ease;
+        }
+
+        .message:hover {
+            transform: translateY(-2px);
         }
 
         .user-message {
-            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            background: linear-gradient(135deg, #6b48ff 0%, #00ddeb 100%);
             color: white;
             align-self: flex-end;
             margin-left: auto;
@@ -71,75 +85,108 @@
         }
 
         .bot-message {
-            background: #f8f9fa;
+            background: #ffffff;
             color: #333;
             align-self: flex-start;
-            border: 1px solid #e9ecef;
+            border: 1px solid #e0e0e0;
             border-bottom-left-radius: 5px;
         }
 
         .error-message {
-            background: #dc3545;
+            background: linear-gradient(135deg, #ff6b6b 0%, #ff8e53 100%);
             color: white;
             align-self: flex-start;
             border-bottom-left-radius: 5px;
-            border: 1px solid #b02a37;
+            border: 1px solid #d63333;
         }
 
         .image {
             max-width: 100%;
-            border-radius: 10px;
-            margin-top: 0.5rem;
+            border-radius: 12px;
+            margin-top: 0.75rem;
             cursor: pointer;
-            transition: all 0.2s ease-in-out;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease-in-out;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
         }
 
         .image.selected {
-            border: 3px solid #007bff !important;
-            box-shadow: 0 0 15px rgba(0, 123, 255, 0.6);
-            transform: scale(1.03);
+            border: 3px solid #6b48ff !important;
+            box-shadow: 0 0 20px rgba(107, 72, 255, 0.6);
+            transform: scale(1.05);
         }
 
         .input-area {
             padding: 1rem;
-            border-top: 1px solid #e9ecef;
-            background: #fff;
+            border-top: 1px solid #e0e0e0;
+            background: #ffffff;
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
         }
 
         .file-label {
-            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-            border: 2px solid #007bff;
-            border-radius: 20px;
-            padding: 0.5rem 1rem;
+            background: linear-gradient(135deg, #f0f0f0 0%, #e0e0e0 100%);
+            border: 2px solid #6b48ff;
+            border-radius: 50px;
+            padding: 0.5rem 1.25rem;
             cursor: pointer;
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
             font-weight: 500;
-            color: #007bff;
-            transition: all 0.3s;
+            color: #6b48ff;
+            transition: all 0.3s ease;
         }
 
         .file-label:hover {
-            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            background: linear-gradient(135deg, #6b48ff 0%, #00ddeb 100%);
             color: white;
-            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.4);
+            box-shadow: 0 5px 15px rgba(107, 72, 255, 0.4);
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            background: linear-gradient(135deg, #6b48ff 0%, #00ddeb 100%);
             border: none;
-            border-radius: 20px;
-            padding: 0.5rem 1.25rem;
+            border-radius: 50px;
+            padding: 0.5rem 1.5rem;
             font-weight: 600;
+            font-size: 1rem;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+            box-shadow: 0 5px 15px rgba(107, 72, 255, 0.3);
         }
 
         .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(0, 123, 255, 0.5);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(107, 72, 255, 0.5);
+        }
+
+        .form-control {
+            border-radius: 50px;
+            border: 2px solid #e0e0e0;
+            padding: 0.75rem 1.25rem;
+            font-size: 1rem;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .form-control:focus {
+            border-color: #6b48ff;
+            box-shadow: 0 0 10px rgba(107, 72, 255, 0.3);
+        }
+
+        .upload-inline-error {
+            animation: fadeIn 0.3s ease-in;
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         @keyframes fadeIn {
@@ -149,6 +196,53 @@
 
             to {
                 opacity: 1;
+            }
+        }
+
+        /* Loading animation for generating message */
+        .generating::after {
+            content: ' .';
+            animation: dots 1.5s infinite;
+            display: inline-block;
+            width: 1em;
+        }
+
+        @keyframes dots {
+            0% {
+                content: ' .';
+            }
+
+            33% {
+                content: ' ..';
+            }
+
+            66% {
+                content: ' ...';
+            }
+        }
+
+        @media (max-width: 576px) {
+            .chat-container {
+                height: 90vh;
+                max-height: none;
+                border-radius: 16px;
+            }
+
+            .chat-header {
+                font-size: 1.2rem;
+                padding: 1rem;
+            }
+
+            .input-area {
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+
+            .form-control,
+            .file-label,
+            .btn-primary {
+                width: 100%;
+                text-align: center;
             }
         }
     </style>
@@ -161,24 +255,14 @@
                 <i class="bi bi-robot me-2"></i>Tenovos Content Creator AI
             </div>
             <div id="chat"></div>
-
             <div class="input-area">
-                <div class="row g-2 align-items-center flex-nowrap">
-                    <div class="col">
-                        <input type="text" id="user-input" class="form-control form-control-lg"
-                            placeholder="Type your message..."
-                            style="border-radius: 25px; border: 2px solid #e9ecef;" />
-                    </div>
-                    <div class="col-auto">
-                        <input type="file" id="image-input" accept="image/*" class="d-none" />
-                        <label for="image-input" class="file-label"><i class="bi bi-paperclip"></i> Choose File</label>
-                    </div>
-                    <div class="col-auto">
-                        <button id="submit-btn" class="btn btn-primary btn-lg">
-                            <i class="bi bi-send-fill"></i>
-                        </button>
-                    </div>
-                </div>
+                <input type="text" id="user-input" class="form-control form-control-lg"
+                    placeholder="Type your message..." />
+                <input type="file" id="image-input" accept="image/*" class="d-none" />
+                <label for="image-input" class="file-label"><i class="bi bi-paperclip"></i> Choose File</label>
+                <button id="submit-btn" class="btn btn-primary btn-lg">
+                    <i class="bi bi-send-fill"></i>
+                </button>
             </div>
         </div>
     </div>
@@ -189,12 +273,11 @@
         const userInput = document.getElementById("user-input");
         const imageInput = document.getElementById("image-input");
         const submitBtn = document.getElementById("submit-btn");
-        let submitting = false; // simple debounce to avoid double submits
+        let submitting = false;
 
-        // -------- Helpers --------
         function addMessage(text, isUser = false, isImage = false, isError = false) {
             const msg = document.createElement("div");
-            msg.className = `message ${isUser ? "user-message" : isError ? "error-message" : "bot-message"}`;
+            msg.className = `message ${isUser ? "user-message" : isError ? "error-message" : "bot-message"} ${isImage ? "" : "generating"}`;
             if (isImage) {
                 msg.innerHTML = `<img src="data:image/png;base64,${text}" class="image" alt="Image">`;
             } else {
@@ -202,6 +285,9 @@
             }
             chat.appendChild(msg);
             chat.scrollTop = chat.scrollHeight;
+            if (!isImage && !isError) {
+                setTimeout(() => msg.classList.remove("generating"), 1500);
+            }
             return msg;
         }
 
@@ -244,33 +330,30 @@
             err.textContent = text;
         }
 
-        // -------- Upload Prompt --------
         function askForUpload(autoMessage = false) {
             const existingPrompt = document.getElementById("upload-confirm");
-            if (existingPrompt) return; // prevent duplicates
+            if (existingPrompt) return;
 
             const msg = document.createElement("div");
             msg.className = "message bot-message";
             msg.id = "upload-confirm";
             msg.innerHTML = `
-        <p class="mb-2">${autoMessage
+                <p class="mb-2">${autoMessage
                     ? "Do you want to upload the generated image(s) to Tenovos DAM? Please select at least one image."
                     : "Do you want to upload the selected image(s) into Tenovos DAM?"}</p>
-        <div class="mt-1 d-flex gap-2">
-            <button class="btn btn-success btn-sm" id="yes-upload"><i class="bi bi-check-circle"></i> Yes</button>
-            <button class="btn btn-danger btn-sm" id="no-upload"><i class="bi bi-x-circle"></i> No</button>
-        </div>
-    `;
+                <div class="mt-1 d-flex gap-2">
+                    <button class="btn btn-success btn-sm" id="yes-upload"><i class="bi bi-check-circle"></i> Yes</button>
+                    <button class="btn btn-danger btn-sm" id="no-upload"><i class="bi bi-x-circle"></i> No</button>
+                </div>
+            `;
             chat.appendChild(msg);
             chat.scrollTop = chat.scrollHeight;
 
-            // attach handlers exactly once
             msg.querySelector("#yes-upload").addEventListener("click", handleUpload);
             msg.querySelector("#no-upload").addEventListener("click", handleNoUpload);
         }
 
         function handleNoUpload() {
-            // Remove the prompt and clear any selections
             removeUploadConfirm();
             clearSelections();
             addMessage("Upload cancelled.", false);
@@ -281,12 +364,10 @@
             const selectedImages = getSelectedImages();
 
             if (selectedImages.length === 0) {
-                // Show error but DO NOT close the upload section
                 ensureInlineError(confirmSection, "Please select at least one image before uploading.");
                 return;
             }
 
-            // We proceed -> remove the prompt then upload
             removeUploadConfirm();
             addMessage(`Uploading ${selectedImages.length} image(s) to Tenovos DAM...`, false);
 
@@ -310,12 +391,10 @@
             }
         }
 
-        // -------- Events --------
         chat.addEventListener("click", (event) => {
             const target = event.target;
             if (target.tagName === "IMG" && target.classList.contains("image")) {
                 target.classList.toggle("selected");
-                // Remove inline error when user interacts again
                 const confirmSection = document.getElementById('upload-confirm');
                 if (confirmSection) {
                     const err = confirmSection.querySelector('.upload-inline-error');
@@ -325,14 +404,13 @@
         });
 
         window.addEventListener("load", () => {
-            addMessage("Hi! I’m Tenovos AI. Please enter a prompt or upload a image to begin.");
+            addMessage("Hi! I’m Tenovos AI. Please enter a prompt or upload an image to begin.");
         });
 
         submitBtn.addEventListener("click", async () => {
-            if (submitting) return; // debounce
+            if (submitting) return;
             submitting = true;
 
-            // New command -> reset previous flow
             resetUploadState();
 
             const text = userInput.value.trim();
@@ -358,7 +436,6 @@
                 }
             }
 
-            // Prepare payload for API (text and/or image)
             const payload = {};
             if (text) payload.text = text;
             if (base64) payload.image = base64;
@@ -393,7 +470,6 @@
             }
         });
     </script>
-
 </body>
 
 </html>
